# hinkaller_game

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  main.hpp  sfml-app
inc/: Background.hpp  Character.hpp  FallingObject.hpp  Game.hpp  Score.hpp  Text.hpp  Utils.hpp  config.hpp  loadTextures.hpp  main.hpp
scripts/: Makefile.linux  Makefile.osx
src/: Background.cpp  Character.cpp  FallingObject.cpp  Game.cpp  Score.cpp  Text.cpp  Utils.cpp  loadTextures.cpp  main.cpp
